# accords-entreprise

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  alembic.ini  docker-compose.yaml  logging.conf  pyproject.toml
config/: gemma2_config.json  training_config.yaml
scripts/: analyze_why_llm_finds_themes_in_chunks.py  build_fine_tuning_dataset.py  check_coverage.py  evaluate_embedding_model.py  fine_tuning_embedding_model.py  ingest_documents.py  ingest_themes.py  run_theming.py  test_cos_dist.ipynb  test_flag_embedding.ipynb  test_tagging_llm.ipynb  theme_documents.py  train.py
tca/: constants.py  custom_types.py  document_chunk_manager.py  document_ingester.py  models.py  test_chunking.py  theme_assignment_strategies.py  theme_processor.py  vector_utils.py
tca/alembic/: env.py
tca/alembic/versions/: 1b7cb046be31_initial_migration.py  38a707fa94b7_initial_migration.py  3c5dcd7ace53_add_description_to_themes.py  4fcdf13a2faf_initial_migration.py  8f0a47955710_add_document_name_to_documentchunk.py  90c7b72789aa_initial_migration.py  916a5a6f8020_add_documentchunk_table.py  bc539b61f96c_add_index_to_documentchunk.py  de9238ac5b4e_add_openai_large_embeddings.py  e2eabfd25378_init.py
tca/database/: document_chunk_db_client.py  models.py  session_manager.py  theme_db_client.py
tca/embedding/: document_ingester.py  embedding_clients.py  embedding_utils.py
tca/text/: chunker.py  document_utils.py  llm_clients.py
